crates/plotnik-tests/tests/06-vm/definitions/captured_ref_keeps_match_across_ascension.txt
A = (lexical_declaration)
Q = (program (A) @a)
--------------------- INPUT ----------------------
let x;
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:2:14
  |
1 | A = (lexical_declaration)
  |     --------------------- defined here
2 | Q = (program (A) @a)
  |              ^^^
